filter alignment fix

--- a/docroot/themes/custom/ucsf_mag/scss/view/_recommended_books_videos_podcasts.scss
+++ b/docroot/themes/custom/ucsf_mag/scss/view/_recommended_books_videos_podcasts.scss
@@ -23,11 +23,10 @@
       list-style: none;
       padding-left: 0;
       display: flex;
-      align-self: end;
 
       @include breakpoint($new-x-small) {
-        margin-top: 0;
-        margin-bottom: 1rem;
+        margin-top: 25px;
+        margin-bottom: 0;
       }
     }
 
